--- a/Portafolio/Styles/Portafolio.css
+++ b/Portafolio/Styles/Portafolio.css
@@ -282,19 +282,19 @@ span{
 
 @keyframes words{
     0%, 20% {
-        content: 'Back-E Developer';
+        content: 'Back-End Developer';
     }
     21%, 40% {
-        content: 'Front-E Developer';
+        content: 'Front-End Designer';
     }
     41%, 60% {
         content: 'Software Developer';
     }
     61%, 80% {
-        content: 'Web Designer';
+        content: 'Recruiter';
     }
     81%, 100% {
-        content: 'Test Draft1';
+        content: 'CSR';
     }
 }
 
@@ -389,7 +389,7 @@ span{
     background: var(--main-color);
     height: 300px;
     border-radius: 3rem;
-    cursor: pointer;
+    cursor: default;
     transition: 0.4s ease;
 }
 
@@ -462,8 +462,8 @@ span{
     border-radius: 1rem;
     background: var(--bg-color);
     transition: 0.4s ease;
-    text-align: center; /*Texto fuera de lugar Java Script Skills Section*/
-    cursor: pointer;
+    text-align: center; /*Para el texto fuera de lugar Java Script Skills Section*/
+    cursor: default;
 }
 
 .skillsdiv .main-skills-container .bar:hover {
@@ -680,7 +680,7 @@ section{
 }
 .infoservices{
     border: 3px solid greenyellow;
-}
+}*/
 
 
 /* lineas de ayuda skills section*/ 
@@ -689,7 +689,7 @@ section{
     border: 2px solid yellow;
 }
 
-.skillsdiv .header{
+.skillsdiv .heading{
     border: 2px solid orangered;
 }
 
